[gd_scene load_steps=45 format=3 uid="uid://cel63ercqjlew"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_1so26"]
[ext_resource type="PackedScene" uid="uid://eafog5sb2yt3" path="res://scenes/sword.tscn" id="2_awx25"]
[ext_resource type="Script" path="res://scripts/weapon.gd" id="2_dwn7v"]
[ext_resource type="Texture2D" uid="uid://dyl18gjjnksb4" path="res://assets/sprites/satiro-Sheet_v1.1.png" id="2_k4nhm"]
[ext_resource type="PackedScene" uid="uid://bwno7xougr4ct" path="res://scenes/axe.tscn" id="4_fq7p7"]
[ext_resource type="PackedScene" uid="uid://com48qcqhgydc" path="res://scenes/sword_2.tscn" id="5_tfy3g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qeodg"]
atlas = ExtResource("2_k4nhm")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f80q0"]
atlas = ExtResource("2_k4nhm")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0654m"]
atlas = ExtResource("2_k4nhm")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2paxv"]
atlas = ExtResource("2_k4nhm")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn2y2"]
atlas = ExtResource("2_k4nhm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w0y0"]
atlas = ExtResource("2_k4nhm")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc1i2"]
atlas = ExtResource("2_k4nhm")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3l1m"]
atlas = ExtResource("2_k4nhm")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5o52"]
atlas = ExtResource("2_k4nhm")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_52i3u"]
atlas = ExtResource("2_k4nhm")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8nm1"]
atlas = ExtResource("2_k4nhm")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7n10"]
atlas = ExtResource("2_k4nhm")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jtuj"]
atlas = ExtResource("2_k4nhm")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4srse"]
atlas = ExtResource("2_k4nhm")
region = Rect2(256, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clnan"]
atlas = ExtResource("2_k4nhm")
region = Rect2(288, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkvmo"]
atlas = ExtResource("2_k4nhm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0jtb"]
atlas = ExtResource("2_k4nhm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y1um"]
atlas = ExtResource("2_k4nhm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7eq7"]
atlas = ExtResource("2_k4nhm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyrx8"]
atlas = ExtResource("2_k4nhm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d1h5"]
atlas = ExtResource("2_k4nhm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkb6u"]
atlas = ExtResource("2_k4nhm")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr80j"]
atlas = ExtResource("2_k4nhm")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtl4q"]
atlas = ExtResource("2_k4nhm")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_foneo"]
atlas = ExtResource("2_k4nhm")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cle2k"]
atlas = ExtResource("2_k4nhm")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf374"]
atlas = ExtResource("2_k4nhm")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nynuf"]
atlas = ExtResource("2_k4nhm")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b6or"]
atlas = ExtResource("2_k4nhm")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_emufj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeodg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f80q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0654m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2paxv")
}],
"loop": false,
"name": &"damaged",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn2y2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w0y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc1i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3l1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5o52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52i3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8nm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7n10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jtuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4srse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clnan")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkvmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0jtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y1um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7eq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyrx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d1h5")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkb6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr80j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtl4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_foneo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cle2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf374")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nynuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b6or")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o3mij"]
radius = 3.0
height = 14.0

[sub_resource type="Animation" id="Animation_vyarc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0944]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/sword:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Weapon:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnimatedSprite2D:animation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}

[sub_resource type="Animation" id="Animation_gixss"]
resource_name = "attackDown"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0944, 4.18879]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, -4), Vector2(1, -3), Vector2(-4, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_fhi4n"]
resource_name = "attackLeft"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-3, -8), Vector2(-5, -6.5), Vector2(-3, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.488692, -2.26893]
}

[sub_resource type="Animation" id="Animation_wln7v"]
resource_name = "attackRight"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.488692, 2.26893]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(5, -8), Vector2(7, -6), Vector2(5, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7xmu5"]
resource_name = "attackUp"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/sword:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, -1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.959931, 0.959931]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3, -8), Vector2(4, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d7vk0"]
_data = {
"RESET": SubResource("Animation_vyarc"),
"attackDown": SubResource("Animation_gixss"),
"attackLeft": SubResource("Animation_fhi4n"),
"attackRight": SubResource("Animation_wln7v"),
"attackUp": SubResource("Animation_7xmu5")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ow86t"]
radius = 4.0
height = 14.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 9
platform_floor_layers = 4294967041
script = ExtResource("1_1so26")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_emufj")
animation = &"death"
autoplay = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_o3mij")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d7vk0")
}

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_ow86t")

[node name="Weapon" type="Node2D" parent="."]
visible = false
position = Vector2(4, -4)
rotation = 2.0944
script = ExtResource("2_dwn7v")

[node name="axe" parent="Weapon" instance=ExtResource("4_fq7p7")]
position = Vector2(0, -1)

[node name="sword" parent="Weapon" instance=ExtResource("2_awx25")]
z_index = -1
position = Vector2(0, -1)

[node name="sword2" parent="Weapon" instance=ExtResource("5_tfy3g")]
z_index = -1
position = Vector2(0, -1)

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="dmgTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="hpRegenTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="dmgTimer" to="." method="_on_dmg_timer_timeout"]
[connection signal="timeout" from="hpRegenTimer" to="." method="_on_hp_regen_timer_timeout"]
